@@ -1,44 +1,45 @@
 package calculator;
 
-//Import Junit5 libraries for unit testing:
 import static org.junit.jupiter.api.Assertions.*;
-import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
-class TestOperation {
+public class TestOperation {
 
-	private Operation o;
-	private Operation o2;
+	private Operation op1, op2;
+	private List<Expression> params;
 
 	@BeforeEach
-	void setUp() throws Exception {
-		List<Expression> params1 = Arrays.asList(new MyNumber(3), new MyNumber(4), new MyNumber(5));
-		List<Expression> params2 = Arrays.asList(new MyNumber(5), new MyNumber(4));
-		List<Expression> params3 = Arrays.asList(new Plus(params1), new Minus(params2), new MyNumber(7));
-		o = new Divides(params3);
-		o2 = new Divides(params3);
-	}
-
-	@Test
-	void testEquals() {
-		assertEquals(o,o2);
+	void setUp() throws IllegalConstruction {
+		params = List.of(new MyNumber(4.0), new MyNumber(2.0));
+		op1 = new Divides(params, Notation.INFIX);
+		op2 = new Divides(params, Notation.INFIX);
 	}
 
 	@Test
 	void testCountDepth() {
-		assertEquals(2, o.countDepth());
+		// Divides de deux MyNumber doit avoir profondeur 2
+		assertEquals(2, op1.countDepth());
 	}
 
 	@Test
 	void testCountOps() {
-		assertEquals(3, o.countOps());
+		// 1 opération pour Divides
+		assertEquals(1, op1.countOps());
 	}
 
 	@Test
 	void testCountNbs() {
-		assertEquals(Integer.valueOf(6), o.countNbs());
+		// 2 littéraux MyNumber
+		assertEquals(2, op1.countNbs());
 	}
 
+	@Test
+	void testEquals() {
+		// Deux Divides identiques doivent être égaux
+		assertEquals(op1, op2);
+		assertEquals(op1.hashCode(), op2.hashCode());
+	}
 }
